<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_trees</name>
  <version>0.0.0</version>
  <description>This package aims to control a patrolling robot named Tele for Human-Robot Interaction using data from thermal camera and radar</description>
  <maintainer email="chandrahas.kasoju@uni-luebeck.de">Chandrahas Kasoju</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <behaviortree_cpp_v3 plugin="${prefix}/bt_plugins.xml" />
  </export>
</package>
<!-- This package was generated using the Turtle Nest ROS 2 package creator -->
